force-app/main/default/objects/DMS_File__c/DMS_File__c.object-meta.xml
<CustomObject>
    <label>DMS File</label>
    <nameField>
        <label>DMS File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DMS_Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>