force-app/main/default/objects/DMS_File__c/fields/created_at__c.field-meta.xml
<CustomField>
    <fullName>created_at__c</fullName>
    <label>Create At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>