force-app/main/default/objects/DMS_File__c/fields/document_type__c.field-meta.xml
<CustomField>
    <fullName>document_type__c</fullName>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>