force-app/main/default/objects/DMS_File__c/fields/filename__c.field-meta.xml
<CustomField>
    <fullName>filename__c</fullName>
    <label>Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>