force-app/main/default/objects/DMS_File__c/fields/id_type__c.field-meta.xml
<CustomField>
    <fullName>id_type__c</fullName>
    <label>ID Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>