force-app/main/default/objects/DMS_File__c/fields/ref_id__c.field-meta.xml
<CustomField>
    <fullName>ref_id__c</fullName>
    <label>Ref ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>