force-app/main/default/objects/DMS_File__c/fields/scan_status__c.field-meta.xml
<CustomField>
    <fullName>scan_status__c</fullName>
    <label>Scan Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>