force-app/main/default/objects/DMS_File__c/fields/source_system__c.field-meta.xml
<CustomField>
    <fullName>source_system__c</fullName>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>