force-app/main/default/objects/DMS_File__c/fields/updated_at__c.field-meta.xml
<CustomField>
    <fullName>updated_at__c</fullName>
    <label>Updated At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>