force-app/main/default/objects/DMS_File__c/fields/version__c.field-meta.xml
<CustomField>
    <fullName>version__c</fullName>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>